testdata/baselines/reference/submodule/compiler/dottedNamesInSystem.errors.txt
dottedNamesInSystem.ts(6,14): error TS2339: Property 'B' does not exist on type 'typeof A'.


==== dottedNamesInSystem.ts (1 errors) ====
    export namespace A.B.C {
        export function foo() {}
    }
    
    export function bar() {
        return A.B.C.foo();
                 ~
!!! error TS2339: Property 'B' does not exist on type 'typeof A'.
    }